--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(125, 39, 39);
 }
 
 .App-link {
