--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color: rgb(31, 31, 58);
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,4 +26,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.bg-black{
+  background-color: 'blue' !important
 }
